# otus-scoring-api

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  api.py  docker-compose.yml  pyproject.toml  scoring.py  store.py  test.py
.github/workflows/: ci.yml
test/functional/: test.py
test/unit/: test.py
